# AVFL

./: CMakeLists.txt  README.md  afd.cpp  afd_mc.cpp  afdsgd.cpp  fdasgd5.py  fdml_mc.cpp  logistic.py
scripts/: build.sh  e2006log1p.sh  e2006tfidf.sh  givemesomecredit.sh  shuffle_split.py  slurm  slurm_news20bin  slurm_rcv1bin  slurm_rcv1bin_sgd  slurm_url  slurm_url_sgd  slurm_webspam  slurm_webspam_sgd  standardize.py  uci_credit_card.sh  url.sh  yearpredictionmsd.sh
scripts_mc/: news20_saga.sh  news20_sgd.sh  news20_svrg.sh  rcv1mul_sgd.sh  rcv1mul_svrg.sh
src/: logistic.cpp  logistic.h  logistic_mc.cpp  logistic_mc.h  lr.h  one_hot.cpp  one_hot.h  read_libsvm.cpp  read_libsvm.h  sparse_ops.h  sparse_ops_mc.cpp  sparse_ops_mc.h
